--- a/workspace/index.html
+++ b/workspace/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://public-frontend-cos.metadl.com/mgx/img/favicon.png" type="image/png">
-  <title>DomainPro - Premium Domains for Sale</title>
+  <title>Domains Oasis - Premium Domains for Sale</title>
   <meta name="description" content="Discover premium domains for your business. Professional domain marketplace with secure transactions and expert guidance." />
   <meta name="author" content="DomainPro" />
 
