--- a/workspace/index.html
+++ b/workspace/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Discover premium domains for your business. Professional domain marketplace with secure transactions and expert guidance." />
   <meta name="author" content="DomainPro" />
 
-  <meta property="og:title" content="DomainPro - Premium Domains for Sale" />
+  <meta property="og:title" content="Domains Oasis - Premium Domains for Sale" />
   <meta property="og:description" content="Discover premium domains for your business. Professional domain marketplace with secure transactions and expert guidance." />
   <meta property="og:type" content="website" />
 
